--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
             <li class="list-el">
               <a href="portfolio.html">
                 <div class="portfolio-decoration">
-                  <img src="./img/p1.jpg" alt=""  />
+                  <img  srcset="./img/portfolio/emp1-2x.jpg 2x" src="./img/portfolio/p1.jpg" srcset="" alt=""  />
                   <div class="decoration-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                     для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</div>
@@ -81,7 +81,7 @@
             <li class="list-el">
               <a href="">
                 <div class="portfolio-decoration">
-                  <img src="./img/p2.jpg" alt=""/>
+                  <img srcset="./img/portfolio/emp2-2x.jpg 2x" src="./img/portfolio/p2.jpg" alt=""/>
                   <div class="decoration-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                   для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.</div>
@@ -93,7 +93,7 @@
             <li class="list-el">
               <a href="">
                 <div class="portfolio-decoration">
-                  <img src="./img/p3.jpg" alt=""  />
+                  <img srcset="./img/portfolio/emp3-2x.jpg 2x" src="./img/portfolio/p3.jpg" alt=""  />
                   <div class="decoration-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу
                     для цифрового
@@ -106,7 +106,7 @@
             <li class="list-el">
               <a href="">
                 <div class="portfolio-decoration">
-                  <img src="./img/p4.jpg" alt=""  />
+                  <img srcset="./img/portfolio/emp4-2x.jpg 2x" src="./img/portfolio/p4.jpg" alt=""  />
                   <div class="decoration-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу
                     для цифрового
@@ -120,7 +120,7 @@
             <li class="list-el">
               <a href="">
                 <div class="portfolio-decoration">
-                  <img src="./img/p5.jpg" alt=""  />
+                  <img srcset="./img/portfolio/emp5-2x.jpg 2x" src="./img/portfolio/p5.jpg" alt=""  />
                   <div class="decoration-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу
                     для цифрового
@@ -134,7 +134,7 @@
             <li class="list-el">
               <a href="">
                 <div class="portfolio-decoration">
-                  <img src="./img/p6.jpg" alt=""  />
+                  <img  srcset="./img/portfolio/emp6-2x.jpg 2x" src="./img/portfolio/p6.jpg" alt=""  />
                   <div class="decoration-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу
                     для цифрового
@@ -148,7 +148,7 @@
             <li class="list-el">
               <a href="">
                 <div class="portfolio-decoration">
-                  <img src="./img/p7.jpg" alt=""  />
+                  <img srcset="./img/portfolio/emp7-2x.jpg 2x" src="./img/portfolio/p7.jpg" alt=""  />
                   <div class="decoration-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу
                     для цифрового
@@ -162,7 +162,7 @@
             <li class="list-el">
               <a href="">
                 <div class="portfolio-decoration">
-                  <img src="./img/p8.jpg" alt=""  />
+                  <img srcset="./img/portfolio/emp8-2x.jpg 2x" src="./img/portfolio/p8.jpg" alt=""  />
                   <div class="decoration-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу
                     для цифрового
@@ -176,7 +176,7 @@
             <li class="list-el">
               <a href="">
                 <div class="portfolio-decoration">
-                  <img src="./img/p9.jpg" alt=""  />
+                  <img srcset="./img/portfolio/emp9-2x.jpg 2x" src="./img/portfolio/p9.jpg" alt=""  />
                   <div class="decoration-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу
                     для цифрового
